Enhance header and footer

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,16 +1,14 @@
 <!-- Footer -->
 <footer id="footer">
    <div class="inner">
-      <ul class="icons">
-         <li><a href="https://www.facebook.com/2017iczccamp" target="_blank" class="icon alt fa-facebook-official"><!-- 成楓望建了美景--></a></li>
-         <li><a href="https://www.facebook.com/infor30th" target="_blank" class="icon alt fa-facebook"><!-- 建中資訊--></a></li>
-         <li><a href="https://www.facebook.com/ckcsc30" target="_blank" class="icon alt fa-facebook"><!-- 成功電研--></a></li>
-         <li><a href="https://www.facebook.com/zsisc24" target="_blank" class="icon alt fa-facebook"><!-- 中山資研--></a></li>
-         <li><a href="https://www.facebook.com/CMIOC24" target="_blank" class="icon alt fa-facebook"><!-- 景美電資--></a></li>
+      <ul class="actions">
+         <li><a href="https://www.facebook.com/infor30th" target="_blank" class="icon alt fa-facebook">建中資訊 INFOR 30th</a></li>
+         <li><a href="https://www.facebook.com/ckcsc30" target="_blank" class="icon alt fa-facebook">成功電研 CKCSC 30th</a></li>
+         <li><a href="https://www.facebook.com/zsisc24" target="_blank" class="icon alt fa-facebook">中山資研 ZSISC 24th</a></li>
+         <li><a href="https://www.facebook.com/CMIOC24" target="_blank" class="icon alt fa-facebook">景美電資 CMIOC 24th</a></li>
       </ul>
       <ul class="copyright">
-         <li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+         <li><a href="https://github.com/pcchou/2017-four-schools-CC-camp">© Tommy Chiang, Ping-yu Chou</a></li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
       </ul>
    </div>
 </footer>
-
