--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,22 +1,26 @@
 <!-- Header -->
 <header id="header">
-   <a href="index.html" class="logo"><strong>成楓望建了美景</strong><span> 建成楓景聯合電資暑訓</span</a>
+   <a href="index.html" class="logo"><strong>成楓望建了美景</strong><span> 建成楓景聯合電資暑訓 </span></a>
    <nav>
+      <a href="https://www.facebook.com/2017iczccamp"><span class="icon alt fa-facebook-official"></span></a>
+      <a href="#" class="logo"><span href="" class="button">5/27 開放報名</span></a>
       <a href="#menu">Menu</a>
    </nav>
 </header>
 
 <!-- Menu -->
-<nav id="menu">
+<nav id="menu"><div class="inner">
    <ul class="links">
       <li><a href="index.html">主頁</a></li>
-      <li><a href="landing.html">營隊簡介暨報名辦法</a></li>
+      <li><a href="landing.html">營隊簡介</a></li>
+      <li><a href="landing.html">報名辦法</a></li>
       <li><a href="elements.html">課程資訊</a></li>
+      <li><a href="#">團隊簡介</a></li>
       <li><a href="generic.html">歷年紀錄</a></li>
-      <li><a href="landing.html">Q&A</a><li>
-   </ul>
+      <li><a href="landing.html">Q&amp;A</a></li><li>
+   </li></ul>
    <ul class="actions vertical">
-      <li><a href="#" class="button fit">我想報名</a></li>
+      <li></li>
+      <li><a href="#" class="button fit">我要報名</a></li>
    </ul>
-</nav>
-
+</div><a class="close" href="#menu">Close</a></nav>
