--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,7 +95,7 @@
 						<header class="major">
 							<h2>最新消息？加入我們的粉專吧！</h2>
 						</header>
-						<p style="width: 50vw;">包括課程簡介、報到須知、錄取名單等等重要的注意事項都會在上面公佈！有興趣的夥伴們<strong>快快訂閱</strong>吧！</p>
+						<p style="width: 50vw;">包括課程簡介、報到須知、錄取名單等等重要的注意事項都會在上面公佈！有興趣的夥伴們快快<strong>按讚、訂閱</strong>吧！</p>
 					</div>
 				</section>
 
