--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,134 +28,80 @@
 			</section>
 
 				<!-- Main -->
-					<div id="main">
+				<div id="main">
 
-						<!-- One -->
-							<section id="one" class="tiles">
-								<article>
-									<span class="image">
-										<img src="assets/images/pic01.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="assets/images/pic02.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="assets/images/pic03.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="assets/images/pic04.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="assets/images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="assets/images/pic06.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
-									</header>
-								</article>
-							</section>
+				<!-- One -->
+				<section id="one" class="tiles">
+					<article style="background-image: url(&quot;assets/images/pic01.jpg&quot;);">
+						<span class="image" style="display: none;">
+							<img src="assets/images/pic01.jpg" alt="">
+						</span>
+						<header class="major">
+							<h3><a href="landing.html" class="link">營隊簡介</a></h3>
+							<p></p>
+						</header>
+					<a href="landing.html" class="link primary"></a></article>
+					<article style="background-image: url(&quot;assets/images/pic02.jpg&quot;);">
+						<span class="image" style="display: none;">
+							<img src="assets/images/pic02.jpg" alt="">
+						</span>
+						<header class="major">
+							<h3><a href="landing.html" class="link">報名辦法</a></h3>
+							<p></p>
+						</header>
+					<a href="landing.html" class="link primary"></a></article>
+					<article style="background-image: url(&quot;assets/images/pic03.jpg&quot;);">
+						<span class="image" style="display: none;">
+							<img src="assets/images/pic03.jpg" alt="">
+						</span>
+						<header class="major">
+							<h3><a href="landing.html" class="link">課程資訊</a></h3>
+							<p>敬請期待</p>
+						</header>
+					<a href="landing.html" class="link primary"></a></article>
+					<article style="background-image: url(&quot;assets/images/pic04.jpg&quot;);">
+						<span class="image" style="display: none;">
+							<img src="assets/images/pic04.jpg" alt="">
+						</span>
+						<header class="major">
+							<h3><a href="landing.html" class="link">團隊簡介</a></h3>
+							<p>敬請期待</p>
+						</header>
+					<a href="landing.html" class="link primary"></a></article>
+					<article style="background-image: url(&quot;assets/images/pic05.jpg&quot;);">
+						<span class="image" style="display: none;">
+							<img src="assets/images/pic05.jpg" alt="">
+						</span>
+						<header class="major">
+							<h3><a href="#" class="link">Q & A</a></h3>
+							<p>敬請期待</p>
+						</header>
+					<a href="landing.html" class="link primary"></a></article>
+					<article style="background-image: url(&quot;assets/images/pic06.jpg&quot;);">
+						<span class="image" style="display: none;">
+							<img src="assets/images/pic06.jpg" alt="">
+						</span>
+						<header class="major">
+							<h3><a href="previous.html" class="link">歷年照片</a></h3>
+							<p>往年的活動影像</p>
+						</header>
+					<a href="landing.html" class="link primary"></a></article>
+				</section>
 
-						<!-- Two -->
-							<section id="two">
-								<div class="inner">
-									<header class="major">
-										<h2>Massa libero</h2>
-									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
-									</ul>
-								</div>
-							</section>
-
+				<!-- Two -->
+				<section id="two">
+					<div class="inner">
+						<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F2017iczccamp&tabs=timeline&width=340&height=360&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId=171314869621110" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+						<header class="major">
+							<h2>最新消息？加入我們的粉專吧！</h2>
+						</header>
+						<p style="width: 50vw;">包括課程簡介、報到須知、錄取名單等等重要的注意事項都會在上面公佈！有興趣的夥伴們<strong>快快訂閱</strong>吧！</p>
 					</div>
+				</section>
 
-				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
-							<section>
-								<form method="post" action="#">
-									<div class="field half first">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="special" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
-									</div>
-								</section>
-							</section>
-						</div>
-					</section>
-               <%- include('footer'); %>
-            
 			</div>
+			<%- include('footer'); %>
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -168,3 +114,5 @@
 
 	</body>
 </html>
+
+<!-- vim: set sw=2 ts=2 :-->
