--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,9 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>成楓望建了美景 - 2017 建成楓景聯合電資暑訓</title>
 		<meta charset="utf-8" />
-      <link rel="shortcut icon" type="image/jpeg" href="assets/images/favicon.jpg"/>
+		<link rel="shortcut icon" type="image/jpeg" href="assets/images/favicon.jpg"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,24 +18,14 @@
 	<body>
 
 		<!-- Wrapper -->
-			<div id="wrapper">
+		<div id="wrapper">
 
-            <%- include('header'); %>
-				<!-- Banner -->
-					<section id="banner" class="major">
-						<div class="inner">
-							<header class="major">
-								<h1>Hi, my name is Forty</h1>
-							</header>
-							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
-								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
+			<%- include('header'); %>
+			<!-- Banner -->
+			<section id="banner" class="major">
+				<div class="inner">
+				</div>
+			</section>
 
 				<!-- Main -->
 					<div id="main">
