--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,14 +13,14 @@
    <ul class="links">
       <li><a href="index.html">主頁</a></li>
       <li><a href="landing.html">營隊簡介</a></li>
-      <li><a href="landing.html">報名辦法</a></li>
+      <li><a href="landing.html#reg">報名辦法</a></li>
       <li><a href="elements.html">課程資訊</a></li>
       <li><a href="#">團隊簡介</a></li>
       <li><a href="generic.html">歷年紀錄</a></li>
-      <li><a href="landing.html">Q&amp;A</a></li><li>
+      <li><a href="landing.html#qna">Q &amp; A</a></li><li>
    </li></ul>
    <ul class="actions vertical">
       <li></li>
-      <li><a href="#" class="button fit">我要報名</a></li>
+      <li><a href="#" class="button fit">5/27 開放報名</a></li>
    </ul>
 </div><a class="close" href="#menu">Close</a></nav>
