--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,7 @@
 			<!-- Banner -->
 			<section id="banner" class="major">
 				<div class="inner">
+					<h1>7/25 - 7/31</h1>
 				</div>
 			</section>
 
@@ -38,54 +39,50 @@
 						</span>
 						<header class="major">
 							<h3><a href="landing.html" class="link">營隊簡介</a></h3>
-							<p></p>
 						</header>
-					<a href="landing.html" class="link primary"></a></article>
+					</article>
 					<article style="background-image: url(&quot;assets/images/pic02.jpg&quot;);">
 						<span class="image" style="display: none;">
 							<img src="assets/images/pic02.jpg" alt="">
 						</span>
 						<header class="major">
-							<h3><a href="landing.html" class="link">報名辦法</a></h3>
-							<p></p>
+							<h3><a href="landing.html#reg" class="link">報名辦法</a></h3>
 						</header>
-					<a href="landing.html" class="link primary"></a></article>
+					</article>
 					<article style="background-image: url(&quot;assets/images/pic03.jpg&quot;);">
 						<span class="image" style="display: none;">
 							<img src="assets/images/pic03.jpg" alt="">
 						</span>
 						<header class="major">
-							<h3><a href="landing.html" class="link">課程資訊</a></h3>
-							<p>敬請期待</p>
+							<h3><a href="elements.html" class="link">課程資訊</a></h3>
 						</header>
-					<a href="landing.html" class="link primary"></a></article>
+					</article>
 					<article style="background-image: url(&quot;assets/images/pic04.jpg&quot;);">
 						<span class="image" style="display: none;">
 							<img src="assets/images/pic04.jpg" alt="">
 						</span>
 						<header class="major">
-							<h3><a href="landing.html" class="link">團隊簡介</a></h3>
+							<h3><span href="#" class="">團隊簡介</span></h3>
 							<p>敬請期待</p>
 						</header>
-					<a href="landing.html" class="link primary"></a></article>
+					</article>
 					<article style="background-image: url(&quot;assets/images/pic05.jpg&quot;);">
 						<span class="image" style="display: none;">
 							<img src="assets/images/pic05.jpg" alt="">
 						</span>
 						<header class="major">
-							<h3><a href="#" class="link">Q & A</a></h3>
+							<h3><span href="#" class="">Q &amp A</span></h3>
 							<p>敬請期待</p>
 						</header>
-					<a href="landing.html" class="link primary"></a></article>
+					</article>
 					<article style="background-image: url(&quot;assets/images/pic06.jpg&quot;);">
 						<span class="image" style="display: none;">
 							<img src="assets/images/pic06.jpg" alt="">
 						</span>
 						<header class="major">
-							<h3><a href="previous.html" class="link">歷年照片</a></h3>
-							<p>往年的活動影像</p>
+							<h3><a href="general.html" class="link">歷年照片</a></h3>
 						</header>
-					<a href="landing.html" class="link primary"></a></article>
+					</article>
 				</section>
 
 				<!-- Two -->
@@ -94,7 +91,7 @@
 						<header class="major">
 							<h2>最新消息？加入我們的粉專吧！</h2>
 						</header>
-						<p>包括課程簡介、報到須知、錄取名單等等重要的注意事項都會在上面公佈！有興趣的夥伴們快快<strong>按讚、訂閱</strong>吧！</p>
+						<p>包括課程簡介、注意事項、報到通知、錄取名單等等重要的事項都會在上面公佈！有興趣的夥伴們快快<strong>按讚、訂閱</strong>吧！</p>
 						<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F2017iczccamp&tabs=timeline&width=340&height=360&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId=171314869621110" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 					</div>
 				</section>
