--- a/views/elements.ejs
+++ b/views/elements.ejs
@@ -1,119 +1,119 @@
 <!DOCTYPE HTML>
 <!--
-   Forty by HTML5 UP
-   html5up.net | @ajlkn
-   Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Forty by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-   <head>
-      <title>Elements - Forty by HTML5 UP</title>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-      <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-      <link rel="stylesheet" href="assets/css/main.css" />
-      <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
-      <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-      <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-   </head>
-   <body>
+	<head>
+		<title>成楓望建了美景 — 2017 建成楓景聯合電資暑訓</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	</head>
+	<body>
 
-      <!-- Wrapper -->
-      <div id="wrapper">
+		<!-- Wrapper -->
+		<div id="wrapper">
 
-         <%- include('header'); %>
+			<%- include('header'); %>
 
-         <!-- Main -->
-         <div id="main" class="alt">
-            <div class="inner">
-               <header class="major">
-                  <h1>課程資訊</h1>
-               </header>
-               <div class="table-wrapper">
-                  <table class="alt">
-                     <thead>
-                        <tr>
-                           <th>時間</th>
-                           <th>7/25(二)</th>
-                           <th>7/26(三)</th>
-                           <th>7/27(四)</th>
-                           <th>7/28(五)</th>
-                           <th>7/29(六)</th>
-                           <th>7/30(日)</th>
-                           <th>7/31(一)</th>
-                        </tr>
-                     </thead>
-                     <tbody>
-                        <tr>
-                           <td>08:00~09:00</td>
-                           <td>破冰時間</td>
-                           <td>晨間早操</td>
-                           <td>晨間早操</td>
-                           <td>晨間早操</td>
-                           <td>晨間早操</td>
-                           <td>晨間早操</td>
-                           <td>晨間早操</td>
-                        </tr>
-                        <tr>
-                           <td>0900~12:00</td>
-                           <td>團體遊戲</td>
-                           <td><a id='js'>Javascript</a></td>
-                           <td><a id='ai'>3D Logo</a></td>
-                           <td><a id='sai'>SAI Sketchup</a></td>
-                           <td>大地遊戲(二)</td>
-                           <td><a id='cpp'>C/C++</a></td>
-                           <td>成果發表</td>
-                        </tr>
-                        <tr>
-                           <td>1200~14:00</td>
-                           <td>午餐時間</td>
-                           <td>午餐時間</td>
-                           <td>午餐時間</td>
-                           <td>午餐時間</td>
-                           <td>午餐時間</td>
-                           <td>午餐時間</td>
-                           <td>午餐實間</td>
-                        </tr>
-                        <tr>
-                           <td>14:00~17:00</td>
-                           <td><a id="html">HTML+CSS</a></td>
-                           <td>真人RPG</td>
-                           <td>大地遊戲(一)</td>
-                           <td><a id='BBS'>BBS</a></td>
-                           <td>大地遊戲(二)</td>
-                           <td><a id='rpg'>RPG Maker</a></td>
-                           <td>神秘晚會(至21:30)</td>
-                        </tr>
-                     </tbody>
-                  </table>
-               </div>
-            </div>
-         </div>
+			<!-- Main -->
+			<div id="main" class="alt">
+				<div class="inner">
+					<header class="major">
+						<h1>課程資訊</h1>
+					</header>
+					<div class="table-wrapper">
+						<table class="alt">
+							<thead>
+								<tr>
+									<th>時間</th>
+									<th>7/25(二)</th>
+									<th>7/26(三)</th>
+									<th>7/27(四)</th>
+									<th>7/28(五)</th>
+									<th>7/29(六)</th>
+									<th>7/30(日)</th>
+									<th>7/31(一)</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>08:00~09:00</td>
+									<td>破冰時間</td>
+									<td>晨間早操</td>
+									<td>晨間早操</td>
+									<td>晨間早操</td>
+									<td>晨間早操</td>
+									<td>晨間早操</td>
+									<td>晨間早操</td>
+								</tr>
+								<tr>
+									<td>0900~12:00</td>
+									<td>團體遊戲</td>
+									<td><a id='js'>Javascript</a></td>
+									<td><a id='ai'>3D Logo</a></td>
+									<td><a id='sai'>SAI Sketchup</a></td>
+									<td>大地遊戲(二)</td>
+									<td><a id='cpp'>C/C++</a></td>
+									<td>成果發表</td>
+								</tr>
+								<tr>
+									<td>1200~14:00</td>
+									<td>午餐時間</td>
+									<td>午餐時間</td>
+									<td>午餐時間</td>
+									<td>午餐時間</td>
+									<td>午餐時間</td>
+									<td>午餐時間</td>
+									<td>午餐實間</td>
+								</tr>
+								<tr>
+									<td>14:00~17:00</td>
+									<td><a id="html">HTML+CSS</a></td>
+									<td>真人RPG</td>
+									<td>大地遊戲(一)</td>
+									<td><a id='BBS'>BBS</a></td>
+									<td>大地遊戲(二)</td>
+									<td><a id='rpg'>RPG Maker</a></td>
+									<td>神秘晚會(至21:30)</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
 
-         <%- include('footer'); %>
-      </div>
+			<%- include('footer'); %>
+		</div>
 
-      <!-- Scripts -->
-      <script src="assets/js/jquery.min.js"></script>
-      <script src="assets/js/jquery.scrolly.min.js"></script>
-      <script src="assets/js/jquery.scrollex.min.js"></script>
-      <script src="assets/js/skel.min.js"></script>
-      <script src="assets/js/util.js"></script>
-      <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-      <script src="assets/js/main.js"></script>
-      <script src="assets/js/sweetalert2.min.js"></script>
-      <script>
-      (function($){
-         <% Subject.forEach(function(val, index, arr){ %>
-               $("#<%= val.id %>").click(function(){
-                  swal({
-                     title: '<%= val.title %>',
-                     text: '<%= val.text %>',
-                     imageUrl: 'assets/images/<%= val.id %>.jpg'
-                  });
-                  $("#header").hide().show(0);
-               });
-         <% }); %>
-      })(jQuery);
-      </script>
-   </body>
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<script src="assets/js/main.js"></script>
+		<script src="assets/js/sweetalert2.min.js"></script>
+		<script>
+(function($){
+	<% Subject.forEach(function(val, index, arr){ %>
+			$("#<%= val.id %>").click(function(){
+				swal({
+					title: '<%= val.title %>',
+					text: '<%= val.text %>',
+					imageUrl: 'assets/images/<%= val.id %>.jpg'
+				});
+				$("#header").hide().show(0);
+			});
+		<% }); %>
+})(jQuery);
+		</script>
+	</body>
 </html>
