--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -41,7 +41,7 @@
 											<header class="major">
 												<h3>活動日期</h3>
 											</header>
-											<ul class="realul">
+											<ul>
 												<li>開放報名：5/27（六）</li>
 												<li>報名截止：7/2（日）</li>
 												<li>營隊活動：7/25（二）— &nbsp;7/31（一）<br>
@@ -53,7 +53,7 @@
 									</div>
 								</section>
 								<section>
-									<div alt="" class="image" style="background-image: url(images/pic10.jpg); position: relative;"><h1>錄取名單七月公佈</h1></div>
+									<div alt="" class="image" style="background-image: url(images/pic10.jpg); position: relative;"><h1>錄取名單<br>七月公佈</h1></div>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
@@ -69,7 +69,7 @@
 												<li>依照公告指示完成繳費</li>
 												<li>公佈已繳費名單，確認完成報名流程</li>
 											</ol>
-											<p>關於退費，6/15~6/21退費80%，6/22~6/24退費50%，6/25~6/26退費20%，6/27之後不予退費</p>
+											<p>關於退費：6/15~6/21退費80%，6/22~6/24退費50%，6/25~6/26退費20%，6/27之後不予退費</p>
 										</div>
 									</div>
 								</section>
