--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -33,7 +33,7 @@
 							</section>
 
 						<!-- Two -->
-							<section id="two" class="spotlights">
+							<section id="two_s" class="spotlights">
 								<section>
 									<div alt="" class="image" style="background-image: url(images/pic09.jpg); position: relative;"><h1>7/25<br>到 7/31</h1></div>
 									<div class="content">
@@ -56,6 +56,7 @@
 									<div alt="" class="image" style="background-image: url(images/pic10.jpg); position: relative;"><h1>錄取名單<br>七月公佈</h1></div>
 									<div class="content">
 										<div class="inner">
+											<a class="anchor" id="reg"></a>
 											<header class="major">
 												<h3>報名須知</h3>
 											</header>
