Add Open Graph data and Google Analytics

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,10 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<meta property="og:title" content="成楓望建了美景 - 2017 建成楓景聯合電資暑訓" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://四校電資.camp/" />
+		<meta property="og:image" content="https://xn--wbsw51bgv1arsi.camp/assets/images/background.png" />
 	</head>
 	<body>
 
