--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,7 +84,7 @@
 							<img src="assets/images/pic06.jpg" alt="">
 						</span>
 						<header class="major">
-							<h3><a href="general.html" class="link">歷年照片</a></h3>
+							<h3><a href="generic.html" class="link">歷年照片</a></h3>
 						</header>
 					</article>
 				</section>
