--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,6 +44,7 @@
 						</span>
 						<header class="major">
 							<h3><a href="landing.html" class="link">營隊簡介</a></h3>
+							<p>我們的暑訓在幹麻？</p>
 						</header>
 					</article>
 					<article style="background-image: url(&quot;assets/images/pic02.jpg&quot;);">
@@ -52,6 +53,7 @@
 						</span>
 						<header class="major">
 							<h3><a href="landing.html#reg" class="link">報名辦法</a></h3>
+							<p>加入我們吧！</p>
 						</header>
 					</article>
 					<article style="background-image: url(&quot;assets/images/pic03.jpg&quot;);">
@@ -60,6 +62,7 @@
 						</span>
 						<header class="major">
 							<h3><a href="elements.html" class="link">課程資訊</a></h3>
+							<p>我們的暑訓上些什麼？</p>
 						</header>
 					</article>
 					<article style="background-image: url(&quot;assets/images/pic04.jpg&quot;);">
@@ -68,7 +71,7 @@
 						</span>
 						<header class="major">
 							<h3><span href="#" class="">團隊簡介</span></h3>
-							<p>敬請期待</p>
+							<p>（敬請期待）</p>
 						</header>
 					</article>
 					<article style="background-image: url(&quot;assets/images/pic05.jpg&quot;);">
@@ -77,7 +80,7 @@
 						</span>
 						<header class="major">
 							<h3><span href="#" class="">Q &amp A</span></h3>
-							<p>敬請期待</p>
+							<p>（敬請期待）</p>
 						</header>
 					</article>
 					<article style="background-image: url(&quot;assets/images/pic06.jpg&quot;);">
@@ -86,6 +89,7 @@
 						</span>
 						<header class="major">
 							<h3><a href="generic.html" class="link">歷年照片</a></h3>
+							<p>往年的活動照片！</p>
 						</header>
 					</article>
 				</section>
