Make it RESTful (?)

--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -47,7 +47,7 @@
 												<li>營隊活動：7/25（二）— &nbsp;7/31（一）<br>
 													全程參與費用為 $2500 元，<br>
 													每日活動以 8:00 AM - 5:00 PM 為主，供應午餐，<br>
-													（活動日程表請參見<a href="/elements.html">課程資訊</a>，保留異動空間）</li>
+													（活動日程表請參見<a href="/schedule">課程資訊</a>，保留異動空間）</li>
 											</ul>
 										</div>
 									</div>
