--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,6 @@
 <!-- Header -->
 <header id="header">
-   <a href="index.html" class="logo"><strong>成楓望建了美景</strong><span> 建成楓景聯合電資暑訓 </span></a>
+   <a href="/" class="logo"><strong>成楓望建了美景</strong><span> 建成楓景聯合電資暑訓 </span></a>
    <nav>
       <a href="https://www.facebook.com/2017iczccamp"><span class="icon alt fa-facebook-official"></span></a>
       <a href="#" class="logo"><span href="" class="button">5/27 開放報名</span></a>
@@ -11,13 +11,13 @@
 <!-- Menu -->
 <nav id="menu"><div class="inner">
    <ul class="links">
-      <li><a href="index.html">主頁</a></li>
-      <li><a href="landing.html">營隊簡介</a></li>
-      <li><a href="landing.html#reg">報名辦法</a></li>
-      <li><a href="elements.html">課程資訊</a></li>
+      <li><a href="/">主頁</a></li>
+      <li><a href="/guide">營隊簡介</a></li>
+      <li><a href="/guide#reg">報名辦法</a></li>
+      <li><a href="/schedule">課程資訊</a></li>
       <li><a href="#">團隊簡介</a></li>
-      <li><a href="generic.html">歷年紀錄</a></li>
-      <li><a href="landing.html#qna">Q &amp; A</a></li><li>
+      <li><a href="/gallery">歷年紀錄</a></li>
+      <li><a href="/guide#qna">Q &amp; A</a></li><li>
    </li></ul>
    <ul class="actions vertical">
       <li></li>
