--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
 							<img src="assets/images/pic01.jpg" alt="">
 						</span>
 						<header class="major">
-							<h3><a href="landing.html" class="link">營隊簡介</a></h3>
+							<h3><a href="guide" class="link">營隊簡介</a></h3>
 							<p>我們的暑訓在幹麻？</p>
 						</header>
 					</article>
@@ -52,7 +52,7 @@
 							<img src="assets/images/pic02.jpg" alt="">
 						</span>
 						<header class="major">
-							<h3><a href="landing.html#reg" class="link">報名辦法</a></h3>
+							<h3><a href="guide#reg" class="link">報名辦法</a></h3>
 							<p>加入我們吧！</p>
 						</header>
 					</article>
@@ -61,7 +61,7 @@
 							<img src="assets/images/pic03.jpg" alt="">
 						</span>
 						<header class="major">
-							<h3><a href="elements.html" class="link">課程資訊</a></h3>
+							<h3><a href="/schedule" class="link">課程資訊</a></h3>
 							<p>我們的暑訓上些什麼？</p>
 						</header>
 					</article>
@@ -88,7 +88,7 @@
 							<img src="assets/images/pic06.jpg" alt="">
 						</span>
 						<header class="major">
-							<h3><a href="generic.html" class="link">歷年照片</a></h3>
+							<h3><a href="/gallery" class="link">歷年照片</a></h3>
 							<p>往年的活動照片！</p>
 						</header>
 					</article>
