Remove misleading attribute text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
 						</span>
 						<header class="major">
 							<h3><a href="guide" class="link">營隊簡介</a></h3>
-							<p>我們的暑訓在幹麻？</p>
+							<p>暑訓者，營隊也？</p>
 						</header>
 					</article>
 					<article style="background-image: url(&quot;assets/images/pic02.jpg&quot;);">
