--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -92,6 +92,7 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 		<script src="assets/js/main.js"></script>
 		<script src="assets/js/sweetalert2.min.js"></script>
+		<link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
 		<script>
 (function($){
 	<% Subject.forEach(function(val, index, arr){ %>
