--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -62,7 +62,7 @@
 									<td>午餐時間</td>
 									<td>午餐時間</td>
 									<td>午餐時間</td>
-									<td>午餐實間</td>
+									<td>午餐時間</td>
 								</tr>
 								<tr>
 									<td>14:00~17:00</td>
