fix some error from validator.w3.org

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
 							<img src="assets/images/pic04.jpg" alt="">
 						</span>
 						<header class="major">
-							<h3><span href="#" class="">團隊簡介</span></h3>
+							<h3><span>團隊簡介</span></h3>
 							<p>（敬請期待）</p>
 						</header>
 					</article>
@@ -65,7 +65,7 @@
 							<img src="assets/images/pic05.jpg" alt="">
 						</span>
 						<header class="major">
-							<h3><span href="#" class="">Q &amp A</span></h3>
+							<h3><span>Q &amp; A</span></h3>
 							<p>（敬請期待）</p>
 						</header>
 					</article>
