--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -9,85 +9,97 @@
 	<body>
 
 		<!-- Wrapper -->
-			<div id="wrapper">
+		<div id="wrapper">
 			<%- include('header'); %>
-				<!-- Main -->
-					<div id="main">
+			<!-- Main -->
+			<div id="main">
 
-						<!-- One -->
-							<section id="one">
-								<div class="inner">
-									<header class="major">
-										<h2>營隊簡介</h2>
-									</header>
-									<p>由建國中學資訊社、成功高中電子計算機研習社、中山女高資訊研究社、景美女中電腦資訊社這幾個充滿熱忱的高中社團聯合舉辦。暑訓將以實作課程為主，加上企業參訪、有趣的活動，號召有興趣的國中在學/畢業生一同探索資訊的世界。透過我們的營隊，同學將能更進一步了解什麼是資訊科技，培養進一步的資訊能力。</p>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two_s" class="spotlights">
-								<section>
-									<div alt="" class="image" style="background-image: url(images/pic09.jpg); position: relative;"><h1>7/25<br>到 7/31</h1></div>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>活動日期</h3>
-											</header>
-											<ul>
-												<li>開放報名：5/27（六）</li>
-												<li>報名截止：7/2（日）</li>
-												<li>營隊活動：7/25（二）— &nbsp;7/31（一）<br>
-													全程參與費用為 $2500 元，<br>
-													每日活動以 8:00 AM - 5:00 PM 為主，供應午餐，<br>
-													（活動日程表請參見<a href="/schedule">課程資訊</a>，保留異動空間）</li>
-											</ul>
-										</div>
-									</div>
-								</section>
-								<section>
-									<div alt="" class="image" style="background-image: url(images/pic10.jpg); position: relative;"><h1>錄取名單<br>七月公佈</h1></div>
-									<div class="content">
-										<div class="inner">
-											<a class="anchor" id="reg"></a>
-											<header class="major">
-												<h3>報名須知</h3>
-											</header>
-											<p>本營隊一律採用線上報名，請在報名時間開始後點選本頁下方按鈕，完整填寫報名表單。
-													報名成功後我們將於七月初公佈錄取名單，請留意 E-mail 信箱、粉專以及網站公告！</p>
-											<p>報名流程：</p>
-											<ol>
-												<li>列印家長同意書，簽名後拍照/掃描</li>
-												<li>線上填寫報名表單，上傳檔案</li>
-												<li>等待錄取通知寄發</li>
-												<li>依照公告指示完成繳費</li>
-												<li>公佈已繳費名單，確認完成報名流程</li>
-											</ol>
-											<p>關於退費：6/15~6/21退費80%，6/22~6/24退費50%，6/25~6/26退費20%，6/27之後不予退費</p>
-										</div>
-									</div>
-								</section>
-							</section>
-
-						<!-- Three -->
-							<section id="three">
-								<div class="inner" style="text-align: center;">
-										<span href="" class="button big">5/27 開放報名</span>
-								</div>
-							</section>
-
+				<!-- One -->
+				<section id="one">
+					<div class="inner">
+						<header class="major">
+							<h2>營隊簡介</h2>
+						</header>
+						<p>由建國中學資訊社、成功高中電子計算機研習社、中山女高資訊研究社、景美女中電腦資訊社這幾個充滿熱忱的高中社團聯合舉辦。暑訓將以實作課程為主，加上企業參訪、有趣的活動，號召有興趣的國中在學/畢業生一同探索資訊的世界。透過我們的營隊，同學將能更進一步了解什麼是資訊科技，培養進一步的資訊能力。</p>
 					</div>
+				</section>
 
-			<%- include('footer'); %>
+				<!-- Two -->
+				<section id="two_s" class="spotlights">
+					<section>
+						<div alt="" class="image" style="background-image: url(images/pic09.jpg); position: relative;"><h1>7/25<br>到 7/31</h1></div>
+						<div class="content">
+							<div class="inner">
+								<header class="major">
+									<h3>活動日期</h3>
+								</header>
+								<ul>
+									<li>開放報名：5/27（六）</li>
+									<li>報名截止：7/2（日）</li>
+									<li>營隊活動：7/25（二）— &nbsp;7/31（一）<br>
+										全程參與費用為 $2500 元，<br>
+										每日活動以 8:00 AM - 5:00 PM 為主，供應午餐，<br>
+										（活動日程表請參見<a href="/schedule">課程資訊</a>，保留異動空間）</li>
+								</ul>
+							</div>
+						</div>
+					</section>
+					<section>
+						<div alt="" class="image" style="background-image: url(images/pic10.jpg); position: relative;"><h1>錄取名單<br>七月公佈</h1></div>
+						<div class="content">
+							<div class="inner">
+								<a class="anchor" id="reg"></a>
+								<header class="major">
+									<h3>報名須知</h3>
+								</header>
+								<p>本營隊一律採用線上報名，請在報名時間開始後點選本頁下方按鈕，完整填寫報名表單。
+								報名成功後我們將於七月初公佈錄取名單，請留意 E-mail 信箱、粉專以及網站公告！</p>
+								<p>報名流程：</p>
+								<ol>
+									<li>列印家長同意書，簽名後拍照/掃描</li>
+									<li>線上填寫報名表單，上傳檔案</li>
+									<li>等待錄取通知寄發</li>
+									<li>依照公告指示完成繳費</li>
+									<li>公佈已繳費名單，確認完成報名流程</li>
+								</ol>
+								<p>關於退費：6/15~6/21退費80%，6/22~6/24退費50%，6/25~6/26退費20%，6/27之後不予退費</p>
+							</div>
+						</div>
+					</section>
+				</section>
+
+				<!-- Two and half -->
+				<section class="two">
+					<div class="inner">
+						<header class="major">
+							<h2>有不清楚或好奇的地方嗎？來粉專發問吧！</h2>
+						</header>
+						<p>關於我們的活動有什麼說明不清楚的地方嗎？快來粉專訊息提問吧！</p>
+						<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F2017iczccamp&tabs=timeline&width=340&height=360&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId=171314869621110" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+					</div>
+				</section>
+
+				<div style="clear: both;"></div>
+
+				<!-- Three -->
+				<section id="three">
+					<div class="inner">
+						<span href="" class="button big">5/27 開放報名</span>
+					</div>
+				</section>
+
 			</div>
+			<%- include('footer'); %>
+		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
