--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,7 +81,7 @@
 				</section>
 
 				<!-- Two -->
-				<section id="two">
+				<section class="two">
 					<div class="inner">
 						<header class="major">
 							<h2>最新消息？加入我們的粉專吧！</h2>
