--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,7 +3,7 @@
    <a href="/" class="logo"><strong>成楓望建了美景</strong><span> 建成楓景聯合電資暑訓 </span></a>
    <nav>
       <a href="https://www.facebook.com/2017iczccamp"><span class="icon alt fa-facebook-official"></span></a>
-      <a href="#" class="logo"><span class="button">5/27 開放報名</span></a>
+      <span class="logo"><span href="" class="button">5/27 開放報名</span></span>
       <a href="#menu">Menu</a>
    </nav>
 </header>
