modify some schedule details

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -40,23 +40,21 @@
 									<td>晨間早操</td>
 									<td>晨間早操</td>
 									<td>晨間早操</td>
-									<td>晨間早操</td>
+									<td rowspan="5">神秘活動</td>
 									<td>晨間早操</td>
 									<td>晨間早操</td>
 								</tr>
 								<tr>
 									<td>0900~12:00</td>
-									<td>大地遊戲(一)</td>
+									<td>大地遊戲</td>
 									<td><a id='html'>HTML+CSS</a></td>
 									<td><a id='aviutl'>Aviutl</a></td>
 									<td><a id='js'>Javascript</a></td>
-									<td>大地遊戲(二)</td>
 									<td><a id='python'>Python</a></td>
 									<td>成果發表</td>
 								</tr>
 								<tr>
 									<td>1200~14:00</td>
-									<td>午餐時間</td>
 									<td>午餐時間</td>
 									<td>午餐時間</td>
 									<td>午餐時間</td>
@@ -70,7 +68,6 @@
                            <td rowspan="2"><a id="cpp">C/C++</a></td>
 									<td rowspan="2">真人RPG</td>
 									<td rowspan="2"><a id='rpg'>RPG Maker</a></td>
-									<td rowspan="2">大地遊戲(二)</td>
 									<td rowspan="2"><a id='ai'>Adobe Illustrator</a></td>
 									<td rowspan="2">神秘晚會(至21:30)</td>
 								</tr>
