--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -72,10 +72,12 @@
 				<section class="two">
 					<div class="inner">
 						<header class="major">
-							<h2>有不清楚或好奇的地方嗎？來粉專發問吧！</h2>
+							<h2>有不清楚或好奇的地方嗎？<br style="display: none;">來粉專發問吧！</h2>
 						</header>
 						<p>關於我們的活動有什麼說明不清楚的地方嗎？快來粉專訊息提問吧！</p>
-						<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F2017iczccamp&tabs=timeline&width=340&height=360&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId=171314869621110" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+						<div class="frames">
+							<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F2017iczccamp&tabs=timeline&width=340&height=360&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId=171314869621110" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+						</div>
 					</div>
 				</section>
 
