--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,10 +84,12 @@
 				<section class="two">
 					<div class="inner">
 						<header class="major">
-							<h2>最新消息？加入我們的粉專吧！</h2>
+							<h2>最新消息？<br style="display: none;">加入我們的粉專吧！</h2>
 						</header>
 						<p>包括課程簡介、注意事項、報到通知、錄取名單等等重要的事項都會在上面公佈！有興趣的夥伴們快快<strong>按讚、訂閱</strong>吧！</p>
-						<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F2017iczccamp&tabs=timeline&width=340&height=360&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId=171314869621110" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+						<div class="frames">
+							<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F2017iczccamp&tabs=timeline&width=340&height=360&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId=171314869621110" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+						</div>
 					</div>
 				</section>
 
