Update dates and courses description

--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -27,7 +27,7 @@
 				<!-- Two -->
 				<section id="two_s" class="spotlights">
 					<section>
-						<div alt="" class="image" style="background-image: url(images/pic09.jpg); position: relative;"><h1>7/25<br>到 7/31</h1></div>
+						<div alt="" class="image" style="background-image: url(images/pic09.jpg); position: relative;"><h1>7/25<br>至 6/22</h1></div>
 						<div class="content">
 							<div class="inner">
 								<header class="major">
@@ -35,7 +35,8 @@
 								</header>
 								<ul>
 									<li>開放報名：5/27（六）</li>
-									<li>報名截止：7/2（日）</li>
+									<li>報名截止：6/22（四）</li>
+									<li>名單公佈：6/23（五）</li>
 									<li>營隊活動：7/25（二）— &nbsp;7/31（一）<br>
 										全程參與費用為 $2500 元，<br>
 										每日活動以 8:00 AM - 5:00 PM 為主，供應午餐，<br>
@@ -45,7 +46,7 @@
 						</div>
 					</section>
 					<section>
-						<div alt="" class="image" style="background-image: url(images/pic10.jpg); position: relative;"><h1>錄取名單<br>七月公佈</h1></div>
+						<div alt="" class="image" style="background-image: url(images/pic10.jpg); position: relative;"><h1>錄取名單<br>6/23 公佈</h1></div>
 						<div class="content">
 							<div class="inner">
 								<a class="anchor" id="reg"></a>
@@ -58,7 +59,7 @@
 								<ol>
 									<li>列印家長同意書，簽名後拍照/掃描</li>
 									<li>線上填寫報名表單，上傳檔案</li>
-									<li>等待錄取通知寄發</li>
+									<li>等待 6/23 公佈名單、寄發錄取通知</li>
 									<li>依照公告指示完成繳費</li>
 									<li>公佈已繳費名單，確認完成報名流程</li>
 								</ol>
