--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -49,8 +49,8 @@
 									<td>大地遊戲</td>
 									<td><a id='html'>HTML+CSS</a></td>
 									<td><a id='aviutl'>Aviutl</a></td>
-									<td><a id='js'>Javascript</a></td>
-									<td><a id='python'>Python</a></td>
+									<td><a id='js'>JavaScript</a></td>
+									<td><a id='python'>Python 圖像處裡</a></td>
 									<td>成果發表</td>
 								</tr>
 								<tr>
