modify some date information

--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -31,12 +31,14 @@
 						<div class="content">
 							<div class="inner">
 								<header class="major">
-									<h3>活動日期</h3>
+									<h3>活動日程</h3>
 								</header>
 								<ul>
-									<li>開放報名：5/27（六）</li>
-									<li>報名截止：6/22（四）</li>
+									<li>報名時間：5/27（六）— &nbsp;6/22（四）</li>
 									<li>名單公佈：6/23（五）</li>
+                           <li>正取繳費：6/24（六）— &nbsp;6/30（五）</li>
+                           <li>備取通知：7/01（六）</li>
+                           <li>備取繳費：7/02（日）— &nbsp;7/08（六）</li>
 									<li>營隊活動：7/25（二）— &nbsp;7/31（一）<br>
 										全程參與費用為 $2500 元，<br>
 										每日活動以 8:00 AM - 5:00 PM 為主，供應午餐，<br>
