--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -40,7 +40,7 @@
 									<td>晨間早操</td>
 									<td>晨間早操</td>
 									<td>晨間早操</td>
-									<td rowspan="5">神秘活動</td>
+                           <td rowspan="5">神秘活動<br>(至21:00)</td>
 									<td>晨間早操</td>
 									<td>晨間早操</td>
 								</tr>
@@ -69,7 +69,7 @@
 									<td rowspan="2">真人RPG</td>
 									<td rowspan="2"><a id='rpg'>RPG Maker</a></td>
 									<td rowspan="2"><a id='ai'>Adobe Illustrator</a></td>
-									<td rowspan="2">神秘晚會(至21:30)</td>
+                           <td rowspan="2">神秘晚會<br>(至21:30)</td>
 								</tr>
                         <tr>
                            <td>15:00~17:00</td>
